--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "app.js"
   },
-  "version": "0.0.0-6",
+  "version": "0.0.0-8",
   "engines": {
     "node": "0.6 || 0.7 || 0.8"
   },
@@ -12,6 +12,7 @@
     "express": "*",
     "cradle": "*",
     "ejs": "*",
-    "ejs-locals": "~0.2.5"
+    "ejs-locals": "~0.2.5",
+    "underscore": "*"
   }
 }
